# godot-refactors

./: README.md
godot/: .gitignore  Pruebita.tscn  RefactorTooltip.tscn  character_body_2d.gd  code_edit_with_refactors.gd  codigo_simple.gd  icon.svg.import  node_2d.gd  node_2d.tscn  project.godot  pruebita.gd  puebita.gd  refactor_tooltip.gd  refactorings.gd  refactorings.tscn
godot/addons/godotito/: Godotito.tscn  godotito.gd  plugin.cfg
godot/addons/refactorings/: parser.gdextension  plugin.cfg  plugin.gd  refactor_tooltip.gd  refactor_tooltip.tscn  refactorings.gd  refactorings.tscn
godot/addons/ruake/core/: RuakeTree.gd
godot/addons/ruake/core/REPL/: InEditorREPL.tscn
rust/: .editorconfig  Cargo.toml  config.toml
rust/.cargo/: config.toml
rust/src/: coso.rs  gdscript.pest  godot_ast_types.rs  lib.rs  parsing.rs  printing.rs  refactorings.rs  tests.rs
